<resources>
    <string name="app_name">In2TheBlue</string>
    <string name="HelloString">Hello Mate!</string>
    <string name="openLightSensor">Dark mode test</string>
    <string name="luxString">Light Level: %1$.2f lx</string>
    <string name="lightMode">Light mode</string>
    <string name="darkMode">Dark mode</string>
    <string name="GameTitle">In2TheBlue</string>
    <string name="game">Game</string>
    <string name="diver">Diver</string>
    <string name="shark">Shark</string>
    <string name="background">Background</string>
    <string name="shake_to_get_rid_of_the_shark">Shake to get rid of the shark</string>
    <string name="tilt">Tilt</string>
    <string name="start_game">Start Game</string>
    <string name="profile">Profile</string>
    <string name="inventory">Inventory</string>
    <string name="moving_background">Moving background</string>
    <string name="continue_game">Continue game</string>
    <string name="open_the_treasure">Open the treasure</string>
    <string name="todo">TODO</string>
    <string name="openChest">TODO</string>
    <string name="imagediver">imageDiver</string>
    <string name="closedChest" />
    <string name="coin">Coin</string>
    <string name="start_a_b_test">Start a/b test</string>
    <string name="open_the_chest">Open the chest</string>
    <string name="coin_label">Coins: %1$d</string>
    <string name="coin_dialog">You got %1$d coins!</string>
    <string name="total_coin_label">Coins: %1$d</string>
    <string name="time_alive">Time alive: %1$d:%2$02d</string>
    <string name="you_died">YOU DIED</string>
    <string name="water_background">Water background</string>
    <string name="inventory_not_done">Inventory NOT DONE</string>
    <string name="profile_button">Profile button</string>
    <string name="settings_button">Settings button</string>
    <string name="inventory_button">Inventory</string>
    <string name="game_paused">Game Paused</string>
    <string name="resume">Resume</string>
    <string name="back_to_start">Back to Start</string>
    <string name="coins">Coins</string>
    <string name="settings_not_done">Settings NOT DONE</string>
    <string name="try_again">Try again!</string>
    <string name="highscore_label">Highscore: %1$d:%2$02d</string>
    <string name="home">Home</string>
    <string name="mute_sound">Mute Sound</string>
    <string name="settings">Settings</string>
    <string name="profile_info">Profile info</string>
    <string name="username_diver_dave">Username: Diver Daisy</string>
    <string name="highscore">Highscore:</string>
    <string name="reset_highscore">Reset Highscore</string>
    <string name="info"> This game is developed by APP2U \n founded by David Unelind, Ida-Lee Fjelstrenius, Jasleen Bharaj and Willard Råborg. This game initially started as a project in the Advanced Interaction Design course at LTH. </string>
    <string name="moreInfo"> How to play? \n The goal of the game is to live as long as possible. You move your player by tilting the phone. Try to avoid the shark and the bombs! You can earn coins by opening chests. </string>
    <string name="infotext">Info</string>
    <string name="highscoretext">Highscore:</string>
    <string name="help">Help</string>
    <string name="open_the_chest_text">Open the chest</string>
    <string name="hitbox">Hitbox</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="bomb_difficulty">Bomb Difficulty</string>
    <string name="reset_coins">reset_coins</string>
    <string name="shark_speeds">Shark Speeds</string>
    <string name="bomb_levels">Bomb Levels</string>
    <string name="chest_difficulty">Chest Difficulty</string>
    <string name="are_you_stuck">Are you stuck?</string>
    <string name="hint">Hint</string>
    <string name="reset_coins1">Reset coins</string>
</resources>