<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vatten"
    tools:context=".MainActivity">

    <!-- Image Button (Settings) - Stays at the top -->

    <ImageButton
        android:id="@+id/btn_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="72dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_button"
        android:onClick="openProfilePage"
        android:scaleType="fitCenter"
        android:src="@drawable/brown_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings_button"
        android:onClick="openSettingsPage"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings1" />

    <!-- Game Title, moved down below the settings button -->

    <ImageButton
        android:id="@+id/btn_inventory_test"
        android:layout_width="69dp"
        android:layout_height="78dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings_button"
        android:onClick="openInventoryPage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/inventory_icon" />

    <TextView
        android:id="@+id/gameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/GameTitle"
        android:fontFamily="@font/moldiedemo"
        android:textAlignment="center"
        android:textColor="@color/amberGold"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings" />

    <!-- Start Game Button -->

    <!-- Additional Buttons -->

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/moldiedemo"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/highscoretext"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/desertCoral"
        android:fontFamily="@font/moldiedemo"
        android:onClick="startGame"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameText" />

    <Button
        android:id="@+id/btn_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/desertCoral"
        android:fontFamily="@font/moldiedemo"
        android:onClick="openInventoryPage"
        android:text="@string/inventory_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_game" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="145dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/desertCoral"
        android:fontFamily="@font/moldiedemo"
        android:onClick="openInfoPage"
        android:text="@string/infotext"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inventory"
        app:layout_constraintVertical_bias="0.126" />

</androidx.constraintlayout.widget.ConstraintLayout>
