<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/darkvatten"
    android:layout_height="match_parent"
    tools:context=".DeathActivity">

    <TextView
        android:id="@+id/deathText"
        android:layout_width="270dp"
        android:layout_height="102dp"
        android:fontFamily="@font/moldiedemo"
        android:text="@string/you_died"
        android:textColor="#bb0a1e"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/desertCoral"
        android:textColor="@color/white"
        android:fontFamily="@font/moldiedemo"
        android:onClick="startGame"
        android:text="@string/try_again"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deathText" />

    <Button
        android:id="@+id/btn_start_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/desertCoral"
        android:textColor="@color/white"
        android:fontFamily="@font/moldiedemo"
        android:onClick="startHome"
        android:text="@string/home"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deathText" />


</androidx.constraintlayout.widget.ConstraintLayout>