<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vatten">

    <!-- Title -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/moldiedemo"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp" />

    <!-- Mute Switch -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/muteSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/moldiedemo"
        android:text="@string/mute_sound"
        android:textColor="@color/white"
        app:thumbTint="@color/desertCoral"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Reset Highscore Button -->
    <Button
        android:id="@+id/btn_resetHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/desertCoral"
        android:fontFamily="@font/moldiedemo"
        android:text="Reset Highscore"
        app:layout_constraintTop_toBottomOf="@id/muteSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Light Sensor Button -->
    <Button
        android:id="@+id/btn_open_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/desertCoral"
        android:fontFamily="@font/moldiedemo"
        android:text="@string/openLightSensor"
        app:layout_constraintTop_toBottomOf="@id/btn_resetHighScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>